@@ -1,5 +1,7 @@
 2012-02-09  Lars Ingebrigtsen  <larsi@gnus.org>
 
+	* nnimap.el (nnimap-wait-for-response): Minor fixup of message string.
+
 	* gnus.el (gnus-server-extend-method): Don't add an -address component
 	if the method already has one (bug#9676).
 
